--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                 <div class="signin-content">
                     <div class="signin-image">
                         <figure><img src="images/signin-image.jpg" alt="sing up image"></figure>
-                        <p class="signup-image-link">Chưa có tài khoản? <a data-toggle="tab" href="#signup">Đăng ký</a></p>
+                        <p class="signup-image-link">Chưa có tài khoản? <a data-toggle="tab" href="./register.html">Đăng ký</a></p>
                     </div>
 
                     <div class="signin-form">
