--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="signup-image">
                         <figure><img src="images/signup-image.jpg" alt="sing up image"></figure>
-                        <p class="signup-image-link">Đã có tài khoản, <a data-toggle="tab" href="#signin">Đăng nhập</a></p>
+                        <p class="signup-image-link">Đã có tài khoản, <a data-toggle="tab" href="./login.html">Đăng nhập</a></p>
                     </div>
                 </div>
             </div>
